RESOLVED FIXED312755
Setting font to a size that matches a legacy <font> size are not portable and are rendered incorrectly with different default font sizes
https://bugs.webkit.org/show_bug.cgi?id=312755
Summary Setting font to a size that matches a legacy <font> size are not portable and...
Tim Horton
Reported 2026-04-20 00:32:19 PDT
Setting font to a size that matches a legacy <font> size are not portable and are rendered incorrectly with different default font sizes
Attachments
Tim Horton
Comment 1 2026-04-20 00:32:20 PDT
Tim Horton
Comment 2 2026-04-20 00:37:15 PDT
EWS
Comment 3 2026-04-21 10:27:44 PDT
Committed 311700@main (c1e16fd16e14): <https://commits.webkit.org/311700@main> Reviewed commits have been landed. Closing PR #63101 and removing active labels.
EWS
Comment 4 2026-05-11 16:36:50 PDT
Committed 305413.877@safari-7624-branch (448100bb04a5): <https://commits.webkit.org/305413.877@safari-7624-branch> Reviewed commits have been landed. Closing PR #5209 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.